--- a/diplomacy/static/supply centre history.html
+++ b/diplomacy/static/supply centre history.html
@@ -35,10 +35,16 @@
           <td bgcolor="#E6EEF0">
             <b>1874</b>
           </td>
+          <td bgcolor="#E6EEF0">
+            <b>1875</b>
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>ank</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -81,6 +87,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -104,10 +113,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>bre</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -150,6 +165,9 @@
           <td>
             A
           </td>
+          <td>
+            A
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -173,10 +191,16 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>con</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -219,10 +243,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>edi</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -265,6 +295,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -278,6 +311,9 @@
           </td>
           <td>
             E
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -311,10 +347,16 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>lon</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -357,10 +399,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>mar</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -403,6 +451,9 @@
           <td>
             R
           </td>
+          <td>
+            R
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -426,6 +477,9 @@
           <td>
             R
           </td>
+          <td>
+            R
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -442,6 +496,9 @@
           </td>
           <td>
             I
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -472,10 +529,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>par</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -518,6 +581,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -537,6 +603,9 @@
           </td>
           <td>
             E
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -564,6 +633,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -587,10 +659,16 @@
           <td>
             A
           </td>
+          <td>
+            A
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>sev</b>
+          </td>
+          <td>
+            R
           </td>
           <td>
             R
@@ -633,6 +711,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -643,6 +724,9 @@
           </td>
           <td>
             
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -679,6 +763,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -702,10 +789,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>tri</b>
+          </td>
+          <td>
+            A
           </td>
           <td>
             A
@@ -748,6 +841,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -764,6 +860,9 @@
           </td>
           <td>
             A
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -794,10 +893,16 @@
           <td>
             R
           </td>
+          <td>
+            R
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>war</b>
+          </td>
+          <td>
+            R
           </td>
           <td>
             R
@@ -1002,6 +1107,35 @@
         <tr>
           <td bgcolor="#E6EEF0">
             <b>1874</b>
+          </td>
+          <td>
+            3
+          </td>
+          <td>
+            7
+          </td>
+          <td>
+            10
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            5
+          </td>
+          <td>
+            9
+          </td>
+          <td>
+            37
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="#E6EEF0">
+            <b>1875</b>
           </td>
           <td>
             3
