--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -226,6 +226,24 @@
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Saturday 13th March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/S1875Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-S1875Ma.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1875 movement orders</div>
+    <iframe class="results" src="static/S1875Mres.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/S1875Msta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-S1875R.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1875 retreats</div>
+    <iframe class="results" src="static/S1875Rres.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/S1875Rsta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1875M.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1875 starting position</div>
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Tuesday 16th March at 1200 GMT.</h3></div>
+    <iframe class="status" src="static/F1875Dsta.html" width="100%" style="border:none;"></iframe>
+  </div>
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="later w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
