--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -244,6 +244,26 @@
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Tuesday 16th March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/F1875Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1875Ma.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1875 movement orders</div>
+    <iframe class="results" src="static/F1875Mres.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/F1875Msta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1875R.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1875 retreats</div>
+    <div class="results"><h3 class="w3-display-middle">Russian army displaced from Munich to give a retreat or disband order as soon as possible. Adjustment phase will then follow, to be completed by 1800 GMT.</h3></div>
+    <!--iframe class="results" src="static/F1875Rres.html" width="100%" style="border:none;"></iframe-->
+    <iframe class="status" src="static/F1875Rsta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <!--div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1875B.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1875 adjustments</div>
+    <iframe class="results" src="static/F1875Ares.html" width="100%" style="border:none;"></iframe>
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing build/remove orders is Tuesday 16th March at 1800 GMT. Affects Austria (-1), France (+1), Russia (-1) and Turkey (+2).</h3></div>
+    <iframe class="status" src="static/F1875Asta.html" width="100%" style="border:none;"></iframe>
+  </div-->
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="later w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
