--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -47,12 +47,14 @@
     <iframe class="results" src="static/S1870Mres.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/S1870Msta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1870M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1870 starting position</div>
     <div class="results"><h3 class="w3-display-middle">No results - this is the Fall 1870 position.</h3></div>
     <iframe class="status" src="static/F1870Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+-->
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1870Ma.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1870 movement orders</div>
@@ -65,24 +67,28 @@
     <iframe class="results" src="static/F1870Ares.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/F1870Asta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1871M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1871 starting position</div>
     <div class="results"><h3 class="w3-display-middle">No results - this is the Spring 1871 position.</h3></div>
     <iframe class="status" src="static/S1871Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+-->
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1871Ma.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1871 movement orders</div>
     <iframe class="results" src="static/S1871Mres.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/S1871Msta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1871M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1871 starting position</div>
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Wednesday 17th February at 1800 GMT.</h3></div>
     <iframe class="status" src="static/F1871Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+-->
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1871Ma.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1871 movement orders</div>
@@ -101,24 +107,28 @@
     <iframe class="results" src="static/F1871Ares.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/F1871Asta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1872M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1872 starting position</div>
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Sunday 21st February at 1200 GMT.</h3></div>
     <iframe class="status" src="static/S1872Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+-->
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1872Ma.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1872 movement orders</div>
     <iframe class="results" src="static/S1872Mres.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/S1872Msta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1872M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1872 starting position</div>
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Wednesday 24th February at 1800 GMT.</h3></div>
     <iframe class="status" src="static/F1872Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+-->
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1872Ma.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1872 movement orders</div>
@@ -138,12 +148,14 @@
     <!--div class="results"><h3 class="w3-display-middle">Deadline for issuing build/remove orders is Thursday 25th February at 1200 GMT.</h3></div-->
     <iframe class="status" src="static/F1872Asta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1873M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1873 starting position</div>
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Sunday 28th February at 1200 GMT.</h3></div>
     <iframe class="status" src="static/S1873Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+-->
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1873Ma.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1873 movement orders</div>
@@ -156,12 +168,14 @@
     <iframe class="results" src="static/S1873Rres.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/S1873Rsta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1873M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1873 starting position</div>
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Wednesday 3rd March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/F1873Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+-->
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1873Ma.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1873 movement orders</div>
@@ -182,24 +196,28 @@
     <!--div class="results"><h3 class="w3-display-middle">Deadline for issuing build/remove orders is Thursday 4th March at 1200 GMT. Affects England (+1), France (+2) and Russia (-1).</h3></div-->
     <iframe class="status" src="static/F1873Asta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1874M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1874 starting position</div>
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Sunday 7th March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/S1874Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+-->
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1874Ma.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1874 movement orders</div>
     <iframe class="results" src="static/S1874Mres.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/S1874Msta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1874M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1874 starting position</div>
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Wednesday 10th March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/F1874Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+-->
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1874Ma.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1874 movement orders</div>
@@ -220,12 +238,14 @@
     <!--div class="results"><h3 class="w3-display-middle">Deadline for issuing build/remove orders is Wednesday 10th March at 1800 GMT. Affects Austria (-1), France (+1), Russia (-1) and Turkey (+2).</h3></div-->
     <iframe class="status" src="static/F1874Asta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1875M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1875 starting position</div>
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Saturday 13th March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/S1875Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+-->
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1875Ma.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1875 movement orders</div>
@@ -238,12 +258,14 @@
     <iframe class="results" src="static/S1875Rres.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/S1875Rsta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1875M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1875 starting position</div>
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Tuesday 16th March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/F1875Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+-->
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1875Ma.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1875 movement orders</div>
@@ -269,6 +291,19 @@
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1876 starting position</div>
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Saturday 20th March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/S1876Dsta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-S1876Ma.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1876 movement orders</div>
+    <iframe class="results" src="static/S1876Mres.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/S1876Msta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-S1876R.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1876 retreats</div>
+    <div class="results"><h3 class="w3-display-middle">Austrian army displaced from Budapest, English army displaced from Venice and French fleet displaced from Albania all to give a retreat or disband order as soon as possible.</h3></div>
+    <!--iframe class="results" src="static/S1876Rres.html" width="100%" style="border:none;"></iframe-->
+    <iframe class="status" src="static/S1876Rsta.html" width="100%" style="border:none;"></iframe>
   </div>
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
