--- a/diplomacy/static/supply centre history.html
+++ b/diplomacy/static/supply centre history.html
@@ -38,10 +38,16 @@
           <td bgcolor="#E6EEF0">
             <b>1875</b>
           </td>
+          <td bgcolor="#E6EEF0">
+            <b>1876</b>
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>ank</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -90,6 +96,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -116,10 +125,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>bre</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -168,6 +183,9 @@
           <td>
             A
           </td>
+          <td>
+            A
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -194,10 +212,16 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>con</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -246,10 +270,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>edi</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -298,6 +328,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -311,6 +344,9 @@
           </td>
           <td>
             E
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -350,10 +386,16 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>lon</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -402,10 +444,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>mar</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -454,6 +502,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -480,6 +531,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -496,6 +550,9 @@
           </td>
           <td>
             I
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -532,10 +589,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>par</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -584,6 +647,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -603,6 +669,9 @@
           </td>
           <td>
             E
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -636,6 +705,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -658,6 +730,9 @@
           </td>
           <td>
             A
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -688,10 +763,16 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>smy</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -740,6 +821,9 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -766,6 +850,9 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -785,6 +872,9 @@
           </td>
           <td>
             R
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -818,6 +908,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -831,6 +924,9 @@
           </td>
           <td>
             
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -870,6 +966,9 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -896,10 +995,16 @@
           <td>
             R
           </td>
+          <td>
+            R
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>war</b>
+          </td>
+          <td>
+            R
           </td>
           <td>
             R
@@ -1136,6 +1241,35 @@
         <tr>
           <td bgcolor="#E6EEF0">
             <b>1875</b>
+          </td>
+          <td>
+            1
+          </td>
+          <td>
+            10
+          </td>
+          <td>
+            10
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            2
+          </td>
+          <td>
+            11
+          </td>
+          <td>
+            46
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="#E6EEF0">
+            <b>1876</b>
           </td>
           <td>
             1
