--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -299,11 +299,17 @@
     <iframe class="status" src="static/S1876Msta.html" width="100%" style="border:none;"></iframe>
   </div>
   <div class="rounds">
-    <img class="maps" src="static/Standard (6 Players)-S1876R.png" style="width:100%">
+    <img class="maps" src="static/Standard (6 Players)-S1876Ra.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1876 retreats</div>
-    <div class="results"><h3 class="w3-display-middle">Austrian army displaced from Budapest, English army displaced from Venice and French fleet displaced from Albania all to give a retreat or disband order as soon as possible.</h3></div>
-    <!--iframe class="results" src="static/S1876Rres.html" width="100%" style="border:none;"></iframe-->
+    <!--div class="results"><h3 class="w3-display-middle">Austrian army displaced from Budapest, English army displaced from Venice and French fleet displaced from Albania all to give a retreat or disband order as soon as possible.</h3></div-->
+    <iframe class="results" src="static/S1876Rres.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/S1876Rsta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1876M.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1876 starting position</div>
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Tuesday 23rd March at 1200 GMT.</h3></div>
+    <iframe class="status" src="static/F1876Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
