--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -311,6 +311,19 @@
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Tuesday 23rd March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/F1876Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1876Ma.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1876 movement orders</div>
+    <iframe class="results" src="static/F1876Mres.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/F1876Msta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1876R.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1876 retreats</div>
+    <div class="results"><h3 class="w3-display-middle">French army displaced from Holland and Russian armies displaced from Moscow and Vienna to give a retreat or disband order as soon as possible. Adjustment phase will then follow, to be completed by 1800 GMT.</h3></div>
+    <!--iframe class="results" src="static/F1876Rres.html" width="100%" style="border:none;"></iframe-->
+    <iframe class="status" src="static/F1876Rsta.html" width="100%" style="border:none;"></iframe>
+  </div>
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="later w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
