--- a/diplomacy/static/supply centre history.html
+++ b/diplomacy/static/supply centre history.html
@@ -41,10 +41,16 @@
           <td bgcolor="#E6EEF0">
             <b>1876</b>
           </td>
+          <td bgcolor="#E6EEF0">
+            <b>1877</b>
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>ank</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -99,6 +105,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -128,10 +137,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>bre</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -186,6 +201,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -215,10 +233,16 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>con</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -273,10 +297,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>edi</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -331,6 +361,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -356,6 +389,9 @@
           </td>
           <td>
             F
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -389,10 +425,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>lon</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -447,10 +489,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>mar</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -505,6 +553,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -534,6 +585,9 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -550,6 +604,9 @@
           </td>
           <td>
             I
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -592,10 +649,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>par</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -650,6 +713,9 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -679,6 +745,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -698,6 +767,9 @@
           </td>
           <td>
             R
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -737,6 +809,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -766,10 +841,16 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>smy</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -824,6 +905,9 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -853,6 +937,9 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -872,6 +959,9 @@
           </td>
           <td>
             R
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -911,6 +1001,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -924,6 +1017,9 @@
           </td>
           <td>
             
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -969,6 +1065,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -998,6 +1097,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -1023,6 +1125,9 @@
           </td>
           <td>
             R
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -1270,6 +1375,35 @@
         <tr>
           <td bgcolor="#E6EEF0">
             <b>1876</b>
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            13
+          </td>
+          <td>
+            7
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            14
+          </td>
+          <td>
+            59
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="#E6EEF0">
+            <b>1877</b>
           </td>
           <td>
             &#160;
