--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -339,6 +339,18 @@
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Saturday 27th March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/S1877Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-S1877Ma.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1877 movement orders</div>
+    <iframe class="results" src="static/S1877Mres.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/S1877Msta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1877M.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1877 starting position</div>
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Tuesday 30th March at 1200 GMT.</h3></div>
+    <iframe class="status" src="static/F1877Dsta.html" width="100%" style="border:none;"></iframe>
+  </div>
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="later w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
